--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,7 +1,7 @@
 name: Autograding Tests
-'on':
-- workflow_dispatch
-- repository_dispatch
+on:
+  workflow_dispatch:
+  repository_dispatch:
 permissions:
   checks: write
   actions: read
